--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -1,8 +1,8 @@
-# Copyright (C) 2017 WPSSO Mobile App Meta (WPSSO AM)
-# This file is distributed under the same license as the WPSSO Mobile App Meta (WPSSO AM) package.
+# Copyright (C) 2017 WPSSO Mobile App Meta
+# This file is distributed under the same license as the WPSSO Mobile App Meta package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta (WPSSO AM) 1.7.19\n"
+"Project-Id-Version: WPSSO Mobile App Meta 1.7.19\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2017-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -324,7 +324,7 @@ msgid ""
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WPSSO Mobile App Meta (WPSSO AM)"
+msgid "WPSSO Mobile App Meta"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
