--- a/languages/wpsso-am-fr_CA.po
+++ b/languages/wpsso-am-fr_CA.po
@@ -2,10 +2,10 @@
 # This file is distributed under the same license as the WPSSO App Meta (WPSSO AM) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta (WPSSO AM) 1.7.19\n"
+"Project-Id-Version: WPSSO Mobile App Meta 1.7.19\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2017-05-23 07:37-0400\n"
-"PO-Revision-Date: 2017-05-23 07:37-0400\n"
+"PO-Revision-Date: 2017-05-24 22:45-0400\n"
 "Last-Translator: JS Morisset <jsm@surniaulula.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
