--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -306,13 +306,13 @@ msgid ""
 "the %3$s plugin before activating %4$s."
 msgstr ""
 
-#: wpsso-am.php:80
+#: wpsso-am.php:79
 msgid ""
-"The %1$s extension requires the %2$s plugin &mdash; please install and "
-"activate the %3$s plugin."
+"The %1$s extension requires the %2$s plugin &mdash; install and activate the "
+"%3$s plugin or <a href=\"%4$s\">deactivate the %5$s extension</a>."
 msgstr ""
 
-#: wpsso-am.php:166
+#: wpsso-am.php:169
 msgid ""
 "The %1$s extension v%2$s requires %3$s v%4$s or newer (v%5$s currently "
 "installed)."
