--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -337,5 +337,5 @@ msgid "JS Morisset"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://surniaulula.com/"
+msgid "https://wpsso.com/"
 msgstr ""
