--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta 1.7.22\n"
+"Project-Id-Version: WPSSO Mobile App Meta 1.8.0-dev.2\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2018-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -312,10 +312,14 @@ msgid ""
 "%3$s plugin or <a href=\"%4$s\">deactivate the %5$s extension</a>."
 msgstr ""
 
-#: wpsso-am.php:189
+#: wpsso-am.php:185
 msgid ""
-"The %1$s extension v%2$s requires %3$s v%4$s or newer (v%5$s currently "
-"installed)."
+"The %1$s version %2$s extension requires %3$s version %4$s or newer (version "
+"%5$s is currently installed)."
+msgstr ""
+
+#: wpsso-am.php:188
+msgid "%s warning: %s"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
