--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta 1.8.0\n"
+"Project-Id-Version: WPSSO Mobile App Meta 1.8.1-dev.2\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2018-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -20,8 +20,8 @@ msgstr ""
 #: lib/config-gettext-extract.php:4
 msgctxt "plugin description"
 msgid ""
-"WPSSO Core extension to provide Apple Store / iTunes and Google Play App "
-"meta tags for Apple's mobile Safari and Twitter's App Card."
+"WPSSO Core add-on to provide Apple Store / iTunes and Google Play App meta "
+"tags for Apple's mobile Safari and Twitter's App Card."
 msgstr ""
 
 #: lib/filters.php:206 lib/filters.php:277 lib/filters.php:287
@@ -302,19 +302,19 @@ msgstr ""
 
 #: wpsso-am.php:88
 msgid ""
-"%1$s is an extension for the %2$s plugin &mdash; please install and activate "
+"%1$s is an add-on for the %2$s plugin &mdash; please install and activate "
 "the %3$s plugin before activating %4$s."
 msgstr ""
 
 #: wpsso-am.php:90
 msgid ""
-"The %1$s extension requires the %2$s plugin &mdash; install and activate the "
-"%3$s plugin or <a href=\"%4$s\">deactivate the %5$s extension</a>."
+"The %1$s add-on requires the %2$s plugin &mdash; install and activate the "
+"%3$s plugin or <a href=\"%4$s\">deactivate the %5$s add-on</a>."
 msgstr ""
 
 #: wpsso-am.php:189
 msgid ""
-"The %1$s version %2$s extension requires %3$s version %4$s or newer (version "
+"The %1$s version %2$s add-on requires %3$s version %4$s or newer (version "
 "%5$s is currently installed)."
 msgstr ""
 
@@ -333,8 +333,8 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"WPSSO Core extension to provide Apple Store / iTunes and Google Play App "
-"meta tags for Apple's mobile Safari and Twitter's App Card."
+"WPSSO Core add-on to provide Apple Store / iTunes and Google Play App meta "
+"tags for Apple's mobile Safari and Twitter's App Card."
 msgstr ""
 
 #. Author of the plugin/theme
