--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -152,7 +152,7 @@ msgstr ""
 msgctxt "plugin description"
 msgid ""
 "WPSSO Core add-on provides Apple Store / iTunes and Google Play App meta "
-"tags for Apple's mobile Safari and Twitter's App Card."
+"tags for Apple's mobile Safari banner and Twitter's App Card."
 msgstr ""
 
 #: lib/gettext-pro.php:6 lib/gpl/admin/post.php:38 lib/pro/admin/post.php:49
@@ -331,7 +331,7 @@ msgstr ""
 #. Description of the plugin/theme
 msgid ""
 "WPSSO Core add-on provides Apple Store / iTunes and Google Play App meta "
-"tags for Apple's mobile Safari and Twitter's App Card."
+"tags for Apple's mobile Safari banner and Twitter's App Card."
 msgstr ""
 
 #. Author of the plugin/theme
