--- a/languages/wpsso-am-fr_FR.po
+++ b/languages/wpsso-am-fr_FR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: WPSSO Mobile App Meta 1.9.2\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2018-12-22 10:37-0600\n"
-"PO-Revision-Date: 2018-12-22 10:37-0600\n"
+"PO-Revision-Date: 2019-03-04 05:21-0800\n"
 "Last-Translator: JS Morisset <jsm@surniaulula.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -31,7 +31,7 @@ msgstr "Le nom de votre application iPhone."
 
 #: lib/filters.php:276
 msgid "Your iPhone App's <em>custom</em> URL scheme (you must include \"://\" after the scheme name)."
-msgstr "Le schéma d'URL <em>personnalisé</em> de votre App iPhone (vous devez inclure \"://\" suivant le nom du schéma)."
+msgstr "Le schéma d'URL <em>personnalisé</em> de votre app iPhone (vous devez inclure \"://\" suivant le nom du schéma)."
 
 #: lib/filters.php:282
 msgid "The numeric representation of your iPad application ID in the App Store (example: \"307234931\")."
@@ -43,7 +43,7 @@ msgstr "Le nom de votre application iPad."
 
 #: lib/filters.php:294
 msgid "Your iPad App's <em>custom</em> URL scheme (you must include \"://\" after the scheme name)."
-msgstr "Le schéma d'URL <em>personnalisé</em> de votre App iPad (vous devez inclure \"://\" suivant le nom du schéma)."
+msgstr "Le schéma d'URL <em>personnalisé</em> de votre app iPad (vous devez inclure \"://\" suivant le nom du schéma)."
 
 #: lib/filters.php:300
 msgid "The fully qualified package name of your Google Play application (example: \"com.google.android.apps.maps\")."
@@ -59,19 +59,19 @@ msgstr "Le schéma d'URL <em>personnalisé</em> de votre application Google Play
 
 #: lib/filters.php:330
 msgid "Add meta tags for the website's mobile App to index and archive pages."
-msgstr "Ajouter les balises méta pour l'App mobile du site Web aux pages d'index et archives."
+msgstr "Ajouter les balises méta pour l'app mobile du site Web aux pages d'index et archives."
 
 #: lib/filters.php:336
 msgid "Add meta tags for the website's mobile App to a static front page."
-msgstr "Ajouter les balises méta pour l'App mobile du site Web à la page d'accueil statique."
+msgstr "Ajouter les balises méta pour l'app mobile du site Web à la page d'accueil statique."
 
 #: lib/filters.php:342
 msgid "Add meta tags for the website's mobile App to Posts, Pages, and custom post types."
-msgstr "Ajouter les balises méta pour l'App mobile du site Web aux Articles, Pages, et articles de type personnalisé."
+msgstr "Ajouter les balises méta pour l'app mobile du site Web aux Articles, Pages, et articles de type personnalisé."
 
 #: lib/filters.php:348
 msgid "A mobile App ID in the Apple Store (example: \"307234931\")."
-msgstr "L'ID d'une App mobile dans l'Apple Store (exemple: \"307234931\")."
+msgstr "L'ID d'une app mobile dans l'Apple Store (exemple: \"307234931\")."
 
 #: lib/filters.php:354
 msgid "If you have an iTunes affiliate string, enter it here."
@@ -79,7 +79,7 @@ msgstr "Si vous avez une chaîne d'affiliation iTunes, entrez-la ici."
 
 #: lib/filters.php:360
 msgid "A query string - which may include one or more inline variables - to provide context to your website's mobile App. If the user has your mobile App installed, this string can allow them to jump from your website to the same content in the mobile App."
-msgstr "Une chaîne de requête - qui peut comprendre une ou plusieurs variables - pour fournir un contexte a votre App mobile de site Web. Si l'utilisateur a votre App mobile installée, cette chaîne permet de sauter du site Web au même contenu sur l'App mobile."
+msgstr "Une chaîne de requête - qui peut comprendre une ou plusieurs variables - pour fournir un contexte a votre app mobile de site Web. Si l'utilisateur a votre app mobile installée, cette chaîne permet de sauter du site Web au même contenu sur l'app mobile."
 
 #: lib/filters.php:366
 msgid "The App Store country providing your application."
@@ -95,7 +95,7 @@ msgstr "Ces options offrent un moyen de présenter une bannière publicitaire po
 
 #: lib/filters.php:396
 msgid "The banner advertisement allows users of your website to download your mobile App and/or switch to your mobile App when using Apple's mobile Safari."
-msgstr "La bande publicitaire permet aux utilisateurs de télécharger votre App mobile et/ou de basculer vers l'application du Apple Store au lieu d'utiliser le navigateur Safari mobile d'Apple."
+msgstr "La bande publicitaire permet aux utilisateurs de télécharger votre app mobile et/ou de basculer vers l'application du Apple Store au lieu d'utiliser le navigateur Safari mobile d'Apple."
 
 #: lib/filters.php:398
 msgid "The Apple Store App information can be customized for each Post, Page, and custom post type under the <em>%1$s</em> tab (enabled above) in the %2$s metabox."
@@ -103,7 +103,7 @@ msgstr "Les informations de l'App Store de Apple peuvent être personnalisées p
 
 #: lib/filters.php:408
 msgid "If you have an Apple Store App to access your website (as an alternative to using mobile web browsers, for example) and/or want to promote a single Apple Store App on your website, enter its details here."
-msgstr "Si vous avez une App mobile du Apple Store pour accéder à votre site Web (comme alternative au navigateurs web mobile) et/ou vous voulez promouvoir une seule App du Apple Store sur votre site Web, entrer ces détailles ici."
+msgstr "Si vous avez une app mobile du Apple Store pour accéder à votre site Web (comme alternative au navigateurs web mobile) et/ou vous voulez promouvoir une seule app du Apple Store sur votre site Web, entrer ces détailles ici."
 
 #: lib/filters.php:421
 msgid "An <em>%1$s</em> tab can be added to the %2$s metabox on Posts, Pages, and custom post types, allowing you to enter specific information about one or more Apple Store and Google Play mobile Apps."
@@ -111,17 +111,17 @@ msgstr "Un onglet <em>%1$s</em> peut être ajouté dans la metabox %2$s sur les 
 
 #: lib/filters.php:423
 msgid "The <em>%s</em> information is used to create meta tags for Twitter's App Card and customize a mobile App banner for Apple's mobile Safari."
-msgstr "Les informations <em>%s</em> sont utilisées pour créer des balises méta pour la carte App de Twitter et personnaliser la bannière d'App pour le navigateur mobile Safari d'Apple."
+msgstr "Les informations <em>%s</em> sont utilisées pour créer des balises méta pour la carte app de Twitter et personnaliser la bannière d'app pour le navigateur mobile Safari d'Apple."
 
 #: lib/gettext-config.php:6
 msgctxt "lib file description"
 msgid "Mobile App Meta"
-msgstr "Méta App mobile"
+msgstr "Méta app mobile"
 
 #: lib/gettext-config.php:7
 msgctxt "plugin description"
 msgid "WPSSO Core add-on provides Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari banner and Twitter's App Card."
-msgstr "Ajout WPSSO Core pour fournir des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
+msgstr "Ajout WPSSO Core pour fournir des balises méta Apple Store / iTunes et Google Play app pour mobile Safari de Apple et la carte app de Twitter."
 
 # Ignore the post type to avoid gender issues in the French translation.
 #: lib/gettext-pro.php:6 lib/gpl/admin/post.php:38 lib/pro/admin/post.php:49
@@ -131,7 +131,7 @@ msgstr "Enregistrer un brouillon ou publier pour activer ces options."
 #: lib/gettext-pro.php:7 lib/gpl/admin/post.php:55 lib/pro/admin/post.php:64
 msgctxt "metabox title"
 msgid "Twitter App Card"
-msgstr "Carte Twitter App"
+msgstr "Carte app de Twitter"
 
 #: lib/gettext-pro.php:8 lib/gpl/admin/post.php:60 lib/pro/admin/post.php:68
 msgctxt "option label"
@@ -141,68 +141,68 @@ msgstr "Territoire du App Store"
 #: lib/gettext-pro.php:9 lib/gpl/admin/post.php:71 lib/pro/admin/post.php:79
 msgctxt "metabox title"
 msgid "iPhone App Details"
-msgstr "Détails App iPhone"
+msgstr "Détails app iPhone"
 
 #: lib/gettext-pro.php:10 lib/gpl/admin/post.php:76 lib/pro/admin/post.php:83
 msgctxt "option label"
 msgid "iPhone App ID"
-msgstr "ID d'App iPhone"
+msgstr "ID d'app iPhone"
 
 #: lib/gettext-pro.php:11 lib/gpl/admin/post.php:83 lib/pro/admin/post.php:89
 msgctxt "option label"
 msgid "iPhone App Name"
-msgstr "Nom d'App iPhone"
+msgstr "Nom d'app iPhone"
 
 #: lib/gettext-pro.php:12 lib/gpl/admin/post.php:91 lib/pro/admin/post.php:96
 msgctxt "option label"
 msgid "iPhone App URL Scheme"
-msgstr "Schéma URL App iPhone"
+msgstr "Schéma URL app iPhone"
 
 #: lib/gettext-pro.php:13 lib/gpl/admin/post.php:102 lib/pro/admin/post.php:107
 msgctxt "metabox title"
 msgid "iPad App Details"
-msgstr "Détails App iPad"
+msgstr "Détails app iPad"
 
 #: lib/gettext-pro.php:14 lib/gpl/admin/post.php:107 lib/pro/admin/post.php:111
 msgctxt "option label"
 msgid "iPad App ID"
-msgstr "ID d'App iPad"
+msgstr "ID d'app iPad"
 
 #: lib/gettext-pro.php:15 lib/gpl/admin/post.php:114 lib/pro/admin/post.php:117
 msgctxt "option label"
 msgid "iPad App Name"
-msgstr "Nom d'App iPad"
+msgstr "Nom d'app iPad"
 
 #: lib/gettext-pro.php:16 lib/gpl/admin/post.php:122 lib/pro/admin/post.php:124
 msgctxt "option label"
 msgid "iPad App URL Scheme"
-msgstr "Schéma URL App iPad"
+msgstr "Schéma URL app iPad"
 
 #: lib/gettext-pro.php:17 lib/gpl/admin/post.php:133 lib/pro/admin/post.php:135
 msgctxt "metabox title"
 msgid "Google Play App Details"
-msgstr "Détails App Google Play"
+msgstr "Détails app Google Play"
 
 #: lib/gettext-pro.php:18 lib/gpl/admin/post.php:138 lib/pro/admin/post.php:139
 msgctxt "option label"
 msgid "Google Play App ID"
-msgstr "ID d'App Google Play"
+msgstr "ID d'app Google Play"
 
 #: lib/gettext-pro.php:19 lib/gpl/admin/post.php:145 lib/pro/admin/post.php:145
 msgctxt "option label"
 msgid "Google Play App Name"
-msgstr "Nom d'App Google Play"
+msgstr "Nom d'app Google Play"
 
 #: lib/gettext-pro.php:20 lib/gpl/admin/post.php:153 lib/pro/admin/post.php:152
 msgctxt "option label"
 msgid "Google Play App URL Scheme"
-msgstr "Schéma URL App Google Play"
+msgstr "Schéma URL app Google Play"
 
 #: lib/gettext-pro.php:21 lib/gpl/admin/post.php:164 lib/pro/admin/post.php:163
 #: lib/submenu/am-general.php:36
 msgctxt "metabox title"
 msgid "Mobile App Banner"
-msgstr "Bannière App Mobile"
+msgstr "Bannière app Mobile"
 
 #: lib/gettext-pro.php:22 lib/gpl/admin/post.php:169 lib/pro/admin/post.php:167
 msgctxt "option label"
@@ -234,7 +234,7 @@ msgstr "Territoire du App Store par défaut"
 #: lib/submenu/am-general.php:48
 msgctxt "metabox title"
 msgid "Mobile App Products"
-msgstr "Produits App mobile"
+msgstr "Produits app mobile"
 
 #: lib/submenu/am-general.php:74
 msgctxt "metabox tab"
@@ -259,7 +259,7 @@ msgstr "Ajouter aux articles de type"
 #: lib/submenu/am-general.php:134
 msgctxt "option label"
 msgid "Default App ID Number"
-msgstr "Numéro d'ID App par défaut"
+msgstr "Numéro d'ID app par défaut"
 
 #: lib/submenu/am-general.php:138
 msgctxt "option label"
@@ -293,7 +293,7 @@ msgstr "https://wpsso.com/extend/plugins/wpsso-am/"
 
 #. Description of the plugin/theme
 msgid "WPSSO Core add-on provides Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari banner and Twitter's App Card."
-msgstr "Ajout WPSSO Core pour fournir des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
+msgstr "Ajout WPSSO Core pour fournir des balises méta Apple Store / iTunes et Google Play app pour mobile Safari de Apple et la carte app de Twitter."
 
 #. Author of the plugin/theme
 msgid "JS Morisset"
