--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -245,7 +245,7 @@ msgstr ""
 msgctxt "plugin description"
 msgid ""
 "Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
-"Banner and Twitter's App Card"
+"Banner and Twitter's App Card."
 msgstr ""
 
 #: lib/gettext-pro.php:6 lib/submenu/am-general.php:160
