--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -302,13 +302,13 @@ msgctxt "option label"
 msgid "Default Argument String"
 msgstr ""
 
-#: wpsso-am.php:118
+#: wpsso-am.php:111
 msgid ""
-"The %1$s add-on requires the %2$s plugin &mdash; install and activate the "
-"plugin or <a href=\"%3$s\">deactivate this add-on</a>."
+"The %1$s add-on requires the %2$s plugin &mdash; please install and activate "
+"the missing plugin."
 msgstr ""
 
-#: wpsso-am.php:229
+#: wpsso-am.php:264
 msgid ""
 "The %1$s version %2$s add-on requires %3$s version %4$s or newer (version "
 "%5$s is currently installed)."
