--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta Tags package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta Tags 3.3.0\n"
+"Project-Id-Version: WPSSO Mobile App Meta Tags 3.4.0-dev.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2020-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -302,16 +302,16 @@ msgctxt "option label"
 msgid "Default Argument String"
 msgstr ""
 
-#: wpsso-am.php:111
+#: wpsso-am.php:229
 msgid ""
-"The %1$s add-on requires the %2$s plugin &mdash; please install and activate "
-"the missing plugin."
+"The %1$s version %2$s add-on requires the %3$s plugin &mdash; please "
+"activate the missing plugin."
 msgstr ""
 
-#: wpsso-am.php:264
+#: wpsso-am.php:232
 msgid ""
-"The %1$s version %2$s add-on requires %3$s version %4$s or newer (version "
-"%5$s is currently installed)."
+"The %1$s version %2$s add-on requires the %3$s version %4$s plugin or newer "
+"(version %5$s is currently installed)."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
