--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta Tags package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta Tags 3.5.0\n"
+"Project-Id-Version: WPSSO Mobile App Meta Tags 3.6.0-dev.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2020-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -234,6 +234,16 @@ msgstr ""
 #: lib/filters.php:502
 msgctxt "option label"
 msgid "Argument String"
+msgstr ""
+
+#: lib/filters.php:522
+msgctxt "lib file description"
+msgid "(code) Mobile App Banner"
+msgstr ""
+
+#: lib/filters.php:526
+msgctxt "lib file description"
+msgid "(code) Twitter App Card Meta Tags"
 msgstr ""
 
 #: lib/gettext-config.php:6
