--- a/languages/wpsso-am-fr_CA.po
+++ b/languages/wpsso-am-fr_CA.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta 3.4.0\n"
+"Project-Id-Version: WPSSO Mobile App Meta 3.6.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
-"POT-Creation-Date: 2020-07-17 09:19-0700\n"
-"PO-Revision-Date: 2020-07-17 09:19-0700\n"
+"POT-Creation-Date: 2020-07-31 06:29-0700\n"
+"PO-Revision-Date: 2020-07-31 06:30-0700\n"
 "Last-Translator: JS Morisset <jsm@surniaulula.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -204,6 +204,16 @@ msgstr "Donnée d'affilié"
 msgctxt "option label"
 msgid "Argument String"
 msgstr "Chaîne d'arguments"
+
+#: lib/filters.php:522
+msgctxt "lib file description"
+msgid "(code) Mobile App Banner"
+msgstr "(code) Bannière app Mobile"
+
+#: lib/filters.php:526
+msgctxt "lib file description"
+msgid "(code) Twitter App Card Meta Tags"
+msgstr "(code) Balises méta carte app de Twitter"
 
 #: lib/gettext-config.php:6
 msgctxt "lib file description"
