--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -12,6 +12,18 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
+#: gettext/gettext-config.php:6 lib/gettext-config.php:6
+msgctxt "lib file description"
+msgid "Mobile Apps"
+msgstr ""
+
+#: gettext/gettext-config.php:7 lib/gettext-config.php:7
+msgctxt "plugin description"
+msgid ""
+"Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
+"Banner and Twitter's App Card."
+msgstr ""
+
 #: lib/filters-messages.php:57
 msgid ""
 "The numeric representation of your iPhone application ID in the App Store "
@@ -244,18 +256,6 @@ msgstr ""
 #: lib/filters.php:555
 msgctxt "lib file description"
 msgid "(code) Twitter App Card Meta Tags"
-msgstr ""
-
-#: lib/gettext-config.php:6
-msgctxt "lib file description"
-msgid "Mobile Apps"
-msgstr ""
-
-#: lib/gettext-config.php:7
-msgctxt "plugin description"
-msgid ""
-"Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
-"Banner and Twitter's App Card."
 msgstr ""
 
 #: lib/submenu/am-general.php:50
