--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta Tags package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta Tags 3.7.1\n"
+"Project-Id-Version: WPSSO Mobile App Meta Tags 3.8.0-dev.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2020-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -27,6 +27,18 @@ msgctxt "plugin description"
 msgid ""
 "Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
 "Banner and Twitter's App Card."
+msgstr ""
+
+#: lib/abstracts/com/add-on.php:155
+msgid ""
+"The %1$s add-on requires the %2$s plugin &mdash; please activate the missing "
+"plugin."
+msgstr ""
+
+#: lib/abstracts/com/add-on.php:169
+msgid ""
+"The %1$s add-on requires %2$s version %3$s or newer (version %4$s is "
+"currently installed)."
 msgstr ""
 
 #: lib/filters-messages.php:57
@@ -311,18 +323,6 @@ msgstr ""
 #: lib/submenu/am-general.php:176
 msgctxt "option label"
 msgid "Default App Store Territory"
-msgstr ""
-
-#: wpsso-am.php:275
-msgid ""
-"The %1$s version %2$s add-on requires the %3$s plugin &mdash; please "
-"activate the missing plugin."
-msgstr ""
-
-#: wpsso-am.php:288
-msgid ""
-"The %1$s version %2$s add-on requires %3$s version %4$s or newer (version "
-"%5$s is currently installed)."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
