--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -12,6 +12,18 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
+#: gettext/gettext-lib-abstracts-com.php:6 lib/abstracts/com/add-on.php:157
+msgid ""
+"The %1$s add-on requires the %2$s plugin &mdash; please activate the missing "
+"plugin."
+msgstr ""
+
+#: gettext/gettext-lib-abstracts-com.php:7 lib/abstracts/com/add-on.php:171
+msgid ""
+"The %1$s add-on requires %2$s version %3$s or newer (version %4$s is "
+"currently installed)."
+msgstr ""
+
 #: gettext/gettext-lib-config.php:6
 msgctxt "lib file description"
 msgid "Mobile Apps"
@@ -27,18 +39,6 @@ msgctxt "plugin description"
 msgid ""
 "Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
 "Banner and Twitter's App Card."
-msgstr ""
-
-#: lib/abstracts/com/add-on.php:157
-msgid ""
-"The %1$s add-on requires the %2$s plugin &mdash; please activate the missing "
-"plugin."
-msgstr ""
-
-#: lib/abstracts/com/add-on.php:171
-msgid ""
-"The %1$s add-on requires %2$s version %3$s or newer (version %4$s is "
-"currently installed)."
 msgstr ""
 
 #: lib/filters-messages.php:57
