--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -37,8 +37,8 @@ msgstr ""
 #: gettext/gettext-lib-config.php:8
 msgctxt "plugin description"
 msgid ""
-"Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
-"Banner and Twitter's App Card."
+"Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari "
+"banner and Twitter's App Card."
 msgstr ""
 
 #: lib/filters-messages.php:61
@@ -335,8 +335,8 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Apple Store / iTunes and Google Play App Meta Tags for Apple's mobile Safari "
-"Banner and Twitter's App Card."
+"Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari "
+"banner and Twitter's App Card."
 msgstr ""
 
 #. Author of the plugin/theme
